# mcp-model

./: .gitignore  README.md  pyproject.toml
client/src/: import.py
server/: pyproject.toml
server/src/: server.py
src/: import.py  main.py
src/server/: package.json
